--- a/index.html
+++ b/index.html
@@ -133,7 +133,9 @@
     <section id="see3" class="panel se3" data-section-name="se3">
         <div class="section footer">
             <p>
-                Copyright&nbsp;2023 by <a href="http://hashcoding.github.io/">HashCoding</a>
+                Copyright © 2022 版权所有 <a href="http://www.jdzu.edu.cn/">景德镇学院</a> 制作发布 <a
+                    href="http://106.15.170.136:8082/zsbweb">翔哥软件团队</a>
+
             </p>
         </div>
     </section>
