--- a/index.html
+++ b/index.html
@@ -3,8 +3,8 @@
 
 <head>
     <meta charset="UTF-8">
-    <title>翔哥软件团队——2023景德镇学院</title>
-
+    <title>景德镇学院 — 翔哥软件团队</title>
+    <link rel="icon" href="components/logo/favicon.ico" />
     <link rel="stylesheet" href="css/main.css" />
 
     <link rel="stylesheet" href="components/reset/reset.css">
@@ -127,7 +127,8 @@
     </section>
 
     <section id="see2" class="panel se2" data-section-name="se2">
-        <div id="container"></div>
+        <div id="container">
+        </div>
     </section>
 
     <section id="see3" class="panel se3" data-section-name="se3">
