--- a/index.html
+++ b/index.html
@@ -127,8 +127,8 @@
     </section>
 
     <section id="see2" class="panel se2" data-section-name="se2">
-        <div id="container">
-        </div>
+        <div id="container"></div>
+        
     </section>
 
     <section id="see3" class="panel se3" data-section-name="se3">
