--- a/index.html
+++ b/index.html
@@ -128,7 +128,7 @@
 
     <section id="see2" class="panel se2" data-section-name="se2">
         <div id="container"></div>
-        
+        <!--test  -->
     </section>
 
     <section id="see3" class="panel se3" data-section-name="se3">
